# ms-carrito/docs/swagger.json
@@ -31,44 +31,6 @@
                         }
                     }
                 }
-            },
-            "post": {
-                "description": "Agrega un carrito a la base de datos",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "carritos"
-                ],
-                "summary": "Crea un carrito",
-                "parameters": [
-                    {
-                        "description": "Carrito a crear",
-                        "name": "carrito",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.CreateCarritoRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.CarritoCreateResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
             }
         },
         "/carrito/cursos": {
@@ -89,94 +51,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/response.CursoCarritoFindAllResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Agrega un curso a un carrito mediante body",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "carritos"
-                ],
-                "summary": "Agrega un curso a un carrito",
-                "parameters": [
-                    {
-                        "description": "Curso a agregar a un carrito",
-                        "name": "curso-carrito",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.CreateCursoCarritoRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.CursoCarritoCreateResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    },
-                    "409": {
-                        "description": "Conflict",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Para un carrito se eliminar un curso",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "carritos"
-                ],
-                "summary": "Elemina un curso de un carrito",
-                "parameters": [
-                    {
-                        "description": "Curso a eliminar de un carrito",
-                        "name": "curso-carrito",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.DeleteCursoCarritoRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.CursoCarritoDeleteOneResponse"
                         }
                     },
                     "500": {
@@ -230,24 +104,23 @@
                         }
                     }
                 }
-            },
-            "delete": {
-                "description": "Elimina un carrito a partir del ID",
-                "consumes": [
-                    "application/json"
-                ],
+            }
+        },
+        "/cliente/{cliente_id}/carrito": {
+            "post": {
+                "description": "Agrega un carrito a la base de datos",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "carritos"
                 ],
-                "summary": "Elimina un carrito",
+                "summary": "Crea un carrito",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ID del carrito",
-                        "name": "id",
+                        "description": "id cliente",
+                        "name": "cliente_id",
                         "in": "path",
                         "required": true
                     }
@@ -256,13 +129,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.CarritoUpdateResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
+                            "$ref": "#/definitions/response.CarritoCreateResponse"
                         }
                     },
                     "500": {
@@ -273,32 +140,20 @@
                     }
                 }
             },
-            "patch": {
-                "description": "Actualiza un carrito ya existente",
-                "consumes": [
-                    "application/json"
-                ],
+            "delete": {
+                "description": "Elimina un carrito a partir del ID del cliente",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "carritos"
                 ],
-                "summary": "Actualiza un carrito",
+                "summary": "Elimina un carrito",
                 "parameters": [
                     {
-                        "description": "carrito a modificar",
-                        "name": "carrito",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.UpdateCarritoRequest"
-                        }
-                    },
-                    {
                         "type": "integer",
-                        "description": "ID del carrito",
-                        "name": "id",
+                        "description": "ID del cliente",
+                        "name": "cliente_id",
                         "in": "path",
                         "required": true
                     }
@@ -325,24 +180,21 @@
                 }
             }
         },
-        "/carrito/{id}/cursos": {
+        "/cliente/{cliente_id}/carrito/curso": {
             "get": {
-                "description": "Busca cursos por id carrito",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Busca cursos por cliente id",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "carritos"
                 ],
-                "summary": "Devuelve los cursos que tiene un carrito por ID",
+                "summary": "Devuelve los cursos que tiene un carrito por cliente ID",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "CARRITO ID",
-                        "name": "id",
+                        "description": "CLIENTE ID",
+                        "name": "cliente_id",
                         "in": "path",
                         "required": true
                     }
@@ -354,6 +206,12 @@
                             "$ref": "#/definitions/response.CursoCarritoFindbyResponse"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -361,24 +219,23 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/cliente/{cliente_id}/carrito/curso/all": {
             "delete": {
-                "description": "Agrega un curso a un carrito mediante body",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Elimina todos los cursos de un cliente",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "carritos"
+                    "cliente"
                 ],
-                "summary": "Agrega un curso a un carrito",
+                "summary": "Elimina todos los cursos a partir del id cliente",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "CARRITO ID",
-                        "name": "id",
+                        "description": "Cliente ID",
+                        "name": "cliente_id",
                         "in": "path",
                         "required": true
                     }
@@ -404,31 +261,117 @@
                     }
                 }
             }
+        },
+        "/cliente/{cliente_id}/carrito/curso/{curso_id}": {
+            "post": {
+                "description": "Agrega un curso a un carrito mediante body",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "carritos"
+                ],
+                "summary": "Agrega un curso a un carrito",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Cliente ID",
+                        "name": "cliente_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Curso ID",
+                        "name": "curso_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.CursoCarritoCreateResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Para un carrito se eliminar un curso",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "carritos"
+                ],
+                "summary": "Elemina un curso de un carrito",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Cliente ID",
+                        "name": "cliente_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Curso ID",
+                        "name": "curso_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.CursoCarritoDeleteOneResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "request.CreateCarritoRequest": {
-            "type": "object",
-            "required": [
-                "session_id"
-            ],
-            "properties": {
-                "session_id": {
-                    "type": "string"
-                }
-            }
-        },
         "request.CreateCursoCarritoRequest": {
             "type": "object",
             "required": [
-                "id_carrito",
-                "id_curso"
+                "carrito_id",
+                "curso_id"
             ],
             "properties": {
-                "id_carrito": {
+                "carrito_id": {
                     "type": "integer"
                 },
-                "id_curso": {
+                "curso_id": {
                     "type": "integer"
                 }
             }
@@ -436,30 +379,15 @@
         "request.DeleteCursoCarritoRequest": {
             "type": "object",
             "required": [
-                "id_carrito",
-                "id_curso"
-            ],
-            "properties": {
-                "id_carrito": {
-                    "type": "integer"
-                },
-                "id_curso": {
-                    "type": "integer"
-                }
-            }
-        },
-        "request.UpdateCarritoRequest": {
-            "type": "object",
-            "required": [
                 "carrito_id",
-                "session_id"
+                "curso_id"
             ],
             "properties": {
                 "carrito_id": {
                     "type": "integer"
                 },
-                "session_id": {
-                    "type": "string"
+                "curso_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -469,9 +397,7 @@
                 "code": {
                     "type": "integer"
                 },
-                "data": {
-                    "$ref": "#/definitions/request.CreateCarritoRequest"
-                },
+                "data": {},
                 "status": {
                     "type": "string"
                 }
@@ -514,8 +440,8 @@
                 "carrito_id": {
                     "type": "integer"
                 },
-                "session_id": {
-                    "type": "string"
+                "cliente_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -608,10 +534,10 @@
         "response.CursoCarritoResponse": {
             "type": "object",
             "properties": {
-                "id_carrito": {
+                "carrito_id": {
                     "type": "integer"
                 },
-                "id_curso": {
+                "curso_id": {
                     "type": "integer"
                 }
             }
@@ -619,7 +545,7 @@
         "response.CursoResponse": {
             "type": "object",
             "properties": {
-                "id_curso": {
+                "curso_id": {
                     "type": "integer"
                 }
             }
