# ms-carrito/internal/request/carrito_request.go
@@ -1,10 +1,0 @@
-package request
-
-type CreateCarritoRequest struct {
-	ClienteId int `json:"cliente_id" validate:"required"`
-}
-
-type UpdateCarritoRequest struct {
-	Id        int `json:"carrito_id" validate:"required"`
-	ClienteId int `json:"cliente_id" validate:"required"`
-}
